<resources>
    <string name="app_name">AlfaCommerce</string>
    <string name="filters">Filters</string>
    <string name="product_image">Product image</string>
    <string name="filters_product_name">Product name</string>
    <string name="filters_dialog_title">Filtering options</string>
    <string name="filters_min_price">Min price</string>
    <string name="filters_max_price">Max price</string>
    <string name="filters_apply">Apply filters</string>
    <string name="filters_min_weight">Min weight</string>
    <string name="filters_max_weight">Max weight</string>
    <string name="filters_colors">Colors</string>
    <string name="product_details_price">Price:</string>
    <string name="why_us">Why us?</string>
    <string name="product_details_buy">Buy now</string>
    <string name="product_details_happy_customers">99.9% of customers would recommend us to their friends</string>
    <string name="product_details_quick_delivery">Quick delivery — on your doorstep tomorrow</string>
    <string name="product_details_free_returns">Free returns and replacements</string>
    <string name="product_info">Product information</string>
    <string name="product_details_color_label">Color</string>
    <string name="product_details_weight_label">Weight [g]</string>
    <string name="bottom_navigation_explore_products">Explore</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_profile">My profile</string>
    <string name="search_box_hint">What are you looking for?</string>
    <string name="search_filters_summary_empty">No filters — Nothing found</string>
</resources>