<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    tools:context=".ui.main.FiltersDialogFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing"
        android:text="@string/filters_dialog_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filters_product_name"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/min_price_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toStartOf="@id/max_price_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/min_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filters_min_price"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:nextFocusForward="@id/max_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/max_price_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/min_price_wrapper"
        app:layout_constraintTop_toBottomOf="@id/name_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/max_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filters_max_price"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:nextFocusForward="@id/min_weight" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/min_weight_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toStartOf="@id/max_weight_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_price_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/min_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filters_min_weight"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:nextFocusForward="@id/max_weight" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/max_weight_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/min_weight_wrapper"
        app:layout_constraintTop_toBottomOf="@id/min_price_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/max_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filters_max_weight"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/colors_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_weight_wrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/filters_colors"
            android:inputType="none"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/filters_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colors_wrapper" />
</androidx.constraintlayout.widget.ConstraintLayout>