<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery"
            android:layout_width="0dp"
            android:layout_height="360dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gallery" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/product_price_box_background"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/product_details_price"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintEnd_toStartOf="@id/price"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/why_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing"
                android:text="@string/why_us"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <ImageView
                android:id="@+id/happy_customers_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/happy_face"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/why_us" />

            <TextView
                android:id="@+id/happy_customers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/product_details_happy_customers"
                app:layout_constraintBottom_toBottomOf="@id/happy_customers_icon"
                app:layout_constraintStart_toEndOf="@id/happy_customers_icon"
                app:layout_constraintTop_toTopOf="@id/happy_customers_icon" />

            <ImageView
                android:id="@+id/quick_delivery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/delivery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/happy_customers_icon" />

            <TextView
                android:id="@+id/quick_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/product_details_quick_delivery"
                app:layout_constraintBottom_toBottomOf="@id/quick_delivery_icon"
                app:layout_constraintStart_toEndOf="@id/quick_delivery_icon"
                app:layout_constraintTop_toTopOf="@id/quick_delivery_icon" />

            <ImageView
                android:id="@+id/free_returns_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_spacing_half"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quick_delivery_icon" />

            <TextView
                android:id="@+id/free_returns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/product_details_free_returns"
                app:layout_constraintBottom_toBottomOf="@id/free_returns_icon"
                app:layout_constraintStart_toEndOf="@id/free_returns_icon"
                app:layout_constraintTop_toTopOf="@id/free_returns_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetBottom="0dp"
        android:text="@string/product_details_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>